[project]
name = "ccsun_node"
description = "About the comfyui image selector, image adjustment (panning, rotation, zoom), adjust image size to be a multiple of 8"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/CC-SUN6/ccsun_node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ccsun_node"
Icon = ""
